test/typecheck/pass/cast_simple.sail

val unit -> int effect pure test

function int test () = {
  (nat) y := ([|0:10|]) 10;
  (int) y
}
