test/typecheck/fail/cast_simple.sail

val unit -> nat effect pure test

function nat test () = {
  (int) y := ([|0:10|]) 10;
  (nat) y
}
